# example-app

./: lint.sh  pyproject.toml
myapp/: __init__.py  app.py  container.py
myapp/application/: todo_service.py
myapp/domain/: todo.py  todo_entry_repository.py
myapp/infrastructure/: todo_entry_repository.py
myapp/infrastructure/api/: setup.py  todo_controller.py  todo_schema.py
myapp/infrastructure/database/: test_todo_entry_repository.py  todo_entry_repository.py
