[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Michael Mercier <michael.mercier@ryax.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
